--- a/src/main/scala/package.json
+++ b/src/main/scala/package.json
@@ -17,6 +17,7 @@
     "path": "^0.12.7",
     "dotenv": "^8.2.0",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "fs": "0.0.1-security",
     "glob": "^7.1.6",
     "csv-parser": "^3.0.0"
