--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "semver": "5.4.6",
     "bcryptjs": "^2.4.3",
     "connect-pg-simple": "^6.2.1",
     "cors": "^2.8.5",
